Push before Report edit
